# rdmo-plugins-llm-views

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
rdmo_llm_tags/: utils.py
rdmo_llm_tags/adapter/: langchain.py
rdmo_llm_tags/templatetags/: llm_tags.py
rdmo_llm_views/: __init__.py  adapter.py  apps.py  checks.py  tasks.py  urls.py  utils.py  viewsets.py
rdmo_llm_views/adapter/: __init__.py  langchain.py
rdmo_llm_views/static/llm_views/css/: loading.css
rdmo_llm_views/static/llm_views/js/: loading.js  reset.js
rdmo_llm_views/templates/llm_views/tags/: error.html  loading.html  metadata.html  reset.html
rdmo_llm_views/templatetags/: llm_tags.py  nodes.py
xml/: llm-attributes.xml  llm.xml
