[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "rdmo-plugins-llm-views"
description = ""
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "RDMO. Research Data Management Organiser e.V.", email = "rdmo-contact@listserv.dfn.de"},
]
requires-python = ">=3.9"
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "django-q",
  "langchain",
]

[project.optional-dependencies]
openai = [
  "langchain-openai",
]
ollama = [
  "langchain-ollama",
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
repository = "https://github.com/rdmorganiser/rdmo-plugins-llm-views.git"

[tool.setuptools.packages.find]
include = ["rdmo_llm_views*"]
exclude = ["*assets*", "*tests*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools_scm]
version_file = "netcdf_viewer/_version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "DJ",   # flake8-django
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "PT",   # flake8-pytest-style
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
  "G",    # flake8-logging-format
  "INT",  # flake8-gettext
  "Q"     # flake8-quotes
]
ignore = [
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B018",   # useless-expression
  "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = ["rdmo"]
section-order = [
  "future",
  "standard-library",
  "pytest",
  "django",
  "rest_framework",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
pytest = ["pytest"]
django = ["django"]
rest_framework = ["rest_framework"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "csv"

[tool.typos.default.extend-words]
ein = "ein"
