[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rdmo-plugins-llm-views"
description = """
An RDMO plugin that adds a "llm" template tag to views in order to generate textual outputs.
It's based on LangChain and supports multiple LLM backends (OpenAI, Ollama).
"""
authors = [
    {name = "RDMO Community and individual contributors", email = "contact@rdmo.org"},
]
maintainers = [
    {name = "Jochen Klar", email = "mail@jochenklar.de"},
]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "AUTHORS"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dynamic = [
  "version",
]
dependencies = [
  "django-q2",
  "langchain",
]

[project.optional-dependencies]
openai = [
  "langchain-openai",
]
ollama = [
  "langchain-ollama",
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
repository = "https://github.com/rdmorganiser/rdmo-plugins-llm-views.git"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["rdmo_llm_views"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "pytest",
  "django",
  "rest_framework",
  "third-party",
  "rdmo",
  "first-party",
  "local-folder"
]

[tool.ruff.lint.isort.sections]
pytest = ["pytest"]
django = ["django"]
rest_framework = ["rest_framework"]
rdmo = ["rdmo"]

[tool.typos.default.extend-words]
ein = "ein"
